Cacti CHANGELOG


-bug#0000913: patch for direct linking to specific graph pages
-bug#0000912: 95th Percentile Thumbnail Graphs Fail with RRDtool 1.2.15, 1.2.18 
-bug#0000898: Selecting a CUSTOM timespan and then CLEARing yields "LAST HALF HOUR" preset 
-bug#0000899: Have settings path page check paths
-bug#0000903: snmpgetnext function does not exist in PHP less than 5.0 
-bug#0000906: Every Tenth Host Does Not Show on Tree During Console Edit 
-bug#0000907: Sorting of Datasources, when interface numbers are used without leading zeros interfaces are incorrectly sorted 
-bug#0000910: cacti complains when trying to set the data source "maximum value" to any number with a decimal point 
-bug#0000919: Problem with ping_tcp function in 8.6j and possible fix.
-bug#0000920: handling of rrdtool --font parameter
-bug#0000921: cactid and ping.pl script error
-bug#0000925: Support for host_* variables in the legend
-bug#0000927: Classic export does not recognize thumbnail columns properly
-bug#0000931: new rrdtool chokes on empty comment 
-bug#0000934: Column 'status_last_error' in table 'host' too short.
-bug#0000937: System output in hosts.php poor for Alcatel
-bug#0000953: SNMP Passphrase displayed in cleartext 
-bug#0000957: Script Server Output's Beginning/Trailing Data During "Include" Causing a Synchronization Issue
-bug#0000958: Slope Mode is Not Selectable  
-bug#0000959: Add Alarming When Poller Output Table is Not Empty 
-bug: ss_sql.php was never tested and causes the script server to crash.
-bug: In an effort to make the current version of Cacti supportable, add Timeshifter.  Thanks Gandolf!
-bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
-bug: Cacti does not have any way to mass add devices, graphs, tree's and permissions.
-bug: Correct index error when creating graphs when you have no hosts on your system.
-bug: More recent versions of net-snmp broke SNMP walk functions.
-bug: Adjust for problematic responses from some SNMPT Agents.